syntax = "proto3";
package wire;


message State {
  uint64 LastFinishedFrameN = 1;
  uint64 LastBlockN = 2;
  bytes  Genesis = 3;
  uint64 TotalCap = 4;
}
